--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ chardet==3.0.4
 Click==7.0
 colorama==0.4.1
 coverage==4.5.2
+dominate==2.3.5
 Flask==1.0.2
+Flask-Bootstrap==3.3.7.1
 heroku==0.1.4
 idna==2.8
 itsdangerous==1.1.0
@@ -26,5 +28,6 @@ six==1.12.0
 urllib3==1.24.1
 virtualenv==16.4.3
 virtualenv-clone==0.5.1
+visitor==0.1.3
 waitress==1.2.1
 Werkzeug==0.15.0
